<resources>
    <string name="app_name">SpicefyApp</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="searchbar_hint">"Masukkan "</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an accounnt?</string>
    <string name="name">Name</string>
    <string name="preview_title">Gambar Spice</string>
    <string name="preview_subtitle">Capture Your Spice In Here</string>
    <string name="spice_image">Gambar Spice</string>
    <string name="no_picture">Tidak ada gambar</string>
    <string name="add_photo">Tambah Gambar</string>
    <string name="process">Proses Gambar</string>
    <string name="remove_photo">Hapus Gambar</string>
    <string name="detail_name_title">Spice Name</string>
    <string name="detail_name_content">-</string>
    <string name="detail_score_title">Tingkat Akurasi</string>
    <string name="detail_score_content">-</string>
    <string name="detail_description_title">Detail Spice</string>
    <string name="detail_description_content">-</string>
    <string name="help_tittle">Cara Penggunaan\nSelamat datang di halaman bantuan penggunaan aplikasi deteksi gambar! Aplikasi ini dirancang untuk memberikan pengalaman yang mudah dan intuitif dalam mendeteksi gambar menggunakan dua metode: melalui kamera dan dari galeri. Berikut adalah panduan langkah demi langkah untuk membantu Anda memahami cara menggunakan kedua fitur tersebut.</string>
    <string name="kamera">Camera</string>
    <string name="cam_help">-</string>
    <string name="galeri">Gallery</string>
    <string name="gallery_help">-</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ForgetPassword">Forget Password?</string>
</resources>