<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/bottomSheet"
    android:background="@drawable/bootom_sheet_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_clear" />

    <ImageView
        android:layout_marginTop="-24dp"
        android:id="@+id/imageView22"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        tools:src="@tools:sample/avatars" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_tittle"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="16sp"
        android:text="@string/kamera"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:justificationMode="inter_word"
        android:text="@string/cam_help" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="16sp"
        android:text="@string/galeri"/>
    <TextView
        android:id="@+id/tvHelpGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:justificationMode="inter_word"
        android:text="@string/gallery_help" />

</LinearLayout>